WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189173
convertToRegExpMatchFastGlobal must use KnownString as the child use kind
https://bugs.webkit.org/show_bug.cgi?id=189173
Summary
convertToRegExpMatchFastGlobal must use KnownString as the child use kind
Saam Barati
Reported
2018-08-30 14:05:23 PDT
We emit this node after a node that does side effects, so it's no longer valid to exit at that node. We also emit type checks on these edges before this node and before the side effect, so KnownString is the valid UseKind to use.
Attachments
patch
(6.22 KB, patch)
2018-08-30 14:15 PDT
,
Saam Barati
saam
: review-
Details
Formatted Diff
Diff
patch
(7.15 KB, patch)
2018-08-30 14:33 PDT
,
Saam Barati
msaboff
: review+
Details
Formatted Diff
Diff
patch for landing
(7.16 KB, patch)
2018-08-30 16:07 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-08-30 14:06:03 PDT
<
rdar://problem/43501645
>
Saam Barati
Comment 2
2018-08-30 14:15:54 PDT
Created
attachment 348547
[details]
patch
Saam Barati
Comment 3
2018-08-30 14:25:47 PDT
Comment on
attachment 348547
[details]
patch Need to fix some assertions
Saam Barati
Comment 4
2018-08-30 14:33:43 PDT
Created
attachment 348552
[details]
patch
Michael Saboff
Comment 5
2018-08-30 14:43:19 PDT
Comment on
attachment 348552
[details]
patch r=me
Saam Barati
Comment 6
2018-08-30 16:07:02 PDT
Created
attachment 348562
[details]
patch for landing
WebKit Commit Bot
Comment 7
2018-08-31 00:45:10 PDT
Comment on
attachment 348562
[details]
patch for landing Clearing flags on attachment: 348562 Committed
r235538
: <
https://trac.webkit.org/changeset/235538
>
WebKit Commit Bot
Comment 8
2018-08-31 00:45:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug